--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <meta name="keywords" content="INIAHMAAM, free music player, online music player, YouTube music player, play YouTube music, MP3 player online, imrunney">
     <meta name="author" content="imrunney_">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://runney-gg.github.io/iniahmaam/">
+    <link rel="canonical" href="https://runney-gg.github.io/Music-player/">
 
     <!-- ── Open Graph (shows preview when shared on Discord, Twitter etc.) ── -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="INIAHMAAM – Free Online Music Player">
     <meta property="og:description" content="Play YouTube videos, playlists, and MP3 links with a beautiful dark music player. Free and no login needed.">
-    <meta property="og:url" content="https://runney-gg.github.io/iniahmaam/">
-    <meta property="og:image" content="https://runney-gg.github.io/iniahmaam/preview.png">
+    <meta property="og:url" content="https://runney-gg.github.io/Music-player/">
+    <meta property="og:image" content="https://runney-gg.github.io/Music-player/preview.png">
     <meta property="og:site_name" content="INIAHMAAM">
 
     <!-- ── Twitter Card ── -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="INIAHMAAM – Free Online Music Player">
     <meta name="twitter:description" content="Play YouTube videos, playlists, and MP3 links instantly. Free online music player by imrunney_.">
-    <meta name="twitter:image" content="https://runney-gg.github.io/iniahmaam/preview.png">
+    <meta name="twitter:image" content="https://runney-gg.github.io/Music-player/preview.png">
 
     <!-- ── Structured Data (helps Google understand your site) ── -->
     <script type="application/ld+json">
@@ -33,7 +33,7 @@
       "@type": "WebApplication",
       "name": "INIAHMAAM",
       "description": "Free online music player. Play YouTube videos, playlists, and MP3 links instantly.",
-      "url": "https://runney-gg.github.io/iniahmaam/",
+      "url": "https://runney-gg.github.io/Music-player/",
       "applicationCategory": "MusicApplication",
       "operatingSystem": "Web",
       "author": {
