add google verification

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="dntlu0yaj4-uG_182mSUJ6hixLx4j9vpfcBCWxz7uls" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ── SEO Meta Tags ── -->
